Use brace 0.10 / Fix menu z-index

--- a/app/style/_ace.styl
+++ b/app/style/_ace.styl
@@ -102,7 +102,7 @@
 	&, & *
 		touch-action manipulation
 	font-size 0.9rem
-	background-color #333
+	background-color #333 !important
 	color #999 !important
 	line-height 1.2rem
 	box-shadow 4px 4px 8px rgba(0, 0, 0, 0.5)
